--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "vue-router": "^3.4.5",
+        "vue-the-mask": "^0.11.1",
         "vuetify": "^2.3.12",
         "vuex": "^3.5.1"
     }
